# netgen

./: configure.ac
libsrc/csg/: Makefile.am
libsrc/general/: Makefile.am
libsrc/geom2d/: Makefile.am
libsrc/gprim/: Makefile.am
libsrc/interface/: Makefile.am
libsrc/linalg/: Makefile.am
libsrc/meshing/: Makefile.am  meshtype.cpp  meshtype.hpp  parallelmesh.cpp  smoothing2.cpp
libsrc/occ/: Makefile.am  Partition_Inter3d.cxx  Partition_Loop2d.cxx  Partition_Spliter.cxx  occgeom.cpp  occmeshsurf.cpp
libsrc/stlgeom/: Makefile.am  stlgeommesh.cpp
libsrc/visualization/: Makefile.am  Makefile.in
ng/: Makefile.am  Makefile.in
nglib/: Makefile.am
